Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boldbi-embed
  labels:
    name: boldbi-embed
